
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________

2025 OCT 17a
  * in model/thermo/_generic/enthalpy.c
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star
  * in model/thermo/_generic/thermo.c
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star to speciesname
    - in _ionizationpot(), added species Ar
  * in model/thermo/_generic/thermo.hh
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star to SMAP
  * in model/thermo/_thermo.h
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star 
  * in model/transport/_Dixon-Lewis/transport.c
    - added species Ar(4S), Ar(4P), Ar2+, Ar2star to Peps and Psig
    

2025 OCT 14a
  * in model/share/chem_share.c
    - added the function minlocal()
    - made various modifications within the dW functions to exclude the contributions to the Jacobian
      that are positive, to improve stability
      

2025 OCT 04a
  * in model/chem/*/chem.hh
    - deleted all the #define CHEM_NEUTRAL
  * in model/emfield/*/emfield.c
    - got rid of the code that was executed when CHEM_NEUTRAL was TRUE
  * in model/fluid/*plasma*/fluid.c
    - added the function double _Nk()
    - in find_prim_fluid_mem() removed Nkmem code
  * in model/fluid/_drift-diffusion/fluid.c
    - fixed a bug in the parameters of find_dTe_dU: spec_t should be flux_t
  * in model/fluid/_drift-diffusion/fluid.h
    - fixed a bug in the parameters of find_U(): flux_t should be spec_t
  * in model/fluid/_fluid.h
    - removed _Nk_from_U()
  * in model/share/fluid_share.c
    - removed _betac()
    - in _rhoc(), got rid of CHEM_NEUTRAL statement
  * in model/share/fluid_share.h
    - moved _betac() here
  * in model/share/transport_share.c
    - got rid of statements related to CHEM_NEUTRAL
  * in model/thermo/_generic/thermo.c
    - removed the constants calM, ck, numatoms